2007-07-20  Adam Piatyszek  <ediap@users.sourceforge.net>

	* INSTALL, README, configure.ac, doc/doxygen_html.cfg.in,
	doc/local/index.doc.in, doc/local/installation.doc,
	itpp/base/blas.h, itpp/base/copy_vector.h, itpp/base/mat.cpp,
	itpp/base/mat.h, itpp/base/sources.mk, itpp/base/vec.cpp,
	itpp/base/vec.h, itpp/config_msvc.h, itpp/signal/transforms.cpp,
	tests/Makefile.am, tests/blas_test.cpp, tests/blas_test.ref,
	win32/itpp_acml.vcproj, win32/itpp_mkl.vcproj: Removed CBLAS
	dependency

	To limit the number of external libraries required by IT++ CBLAS
	interfaces have been replaced with a Fortran BLAS. Besides, vec
	and cvec specialisation of the outer_product() method using BLAS
	functions has been added. To verify BLAS-aided routines, an extra
	blas_test has been added.

2007-07-19  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/mat.h: Fixed a bug in set_size() method

	When resizing a smaller matrix into a bigger one with copying the
	content, the unused entries were not initialised to zeros
	properly.

	Besides, the use of a copy_vector() function instead of nested
	loops with element by element copying increases the overall
	performance of various operations on matrices. Therefore, this
	patch improves performance of set_size(), transpose(),
	hermitian_transpose(), concat_horizontal() and concat_vertical()
	functions.

	* itpp/base/vec.h : Fixed assertion check in operator "/="

2007-07-18  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/vec.h: Use copy_vector() where possible

	This patch improves the consistency and possibly the performance
	of various Vec's methods by using copy_vector() instead of
	explicit copying of elements in a loop. It also fixes a minor bug
	in "/=" operator for the case of division of a vector with itself,
	i.e. "v /= v;". Finally, this patch adds missing friend
	declarations for concat() functions and improves if statements in
	the alloc() function.
